fix: width for overflow

--- a/src/assets/styles/docs.scss
+++ b/src/assets/styles/docs.scss
@@ -486,7 +486,7 @@ $bd-gutter-x: 3rem;
             content: "";
             position: absolute;
             left: 1rem;
-            top: 1rem;
+            top: 1.25rem;
             width: 1.5rem;
             height: 1.5rem;
             background-color: currentColor;
